--- a/src/components/wordgame/WordGame.css
+++ b/src/components/wordgame/WordGame.css
@@ -1,12 +1,11 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+
 .game__wrapper{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 100vh;
-    color: rgb(46, 45, 45);
+    color: rgb(49, 49, 49);
 }
 
 .game{
@@ -20,6 +19,10 @@
     flex:0.5;
 }
 
+.guess{
+    font-family: 'Montserrat', sans-serif;
+}
+
 .hearts__icn{
 color:red;
 }
@@ -29,7 +32,7 @@ color:red;
 }
 
 .active{
-    background-color: rgb(115, 178, 230);
+    background-color: rgb(82, 121, 153);
 }
 
 .input__footer{
@@ -78,15 +81,15 @@ color:red;
 }
 
 .turn{
-  
     font-size: 50px;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
 }
 
-.porfile__pic{
-    height: auto;
+.profile__pic{
+    height: 250px;
     width: 250px;
+    object-fit: cover;
     display: flex;
     margin-top: 30px;
     margin-left: auto;
@@ -137,8 +140,21 @@ text-align: center;
     display: flex;
     top:50%;
     left:50%;
-    transition:0.5s all ease-in-out;
+    transition:0.2s all ease-in-out;
     transform: translate(-50%,-50%) rotate(-90deg);
+}
+
+.back{
+    cursor: pointer;
+    color:rgb(238, 67, 67);
+    position: absolute;
+    top:10px;
+    right:20px;
+}
+
+.exit__app{
+    height: 30px !important;
+    width: 30px !important; 
 }
 
 .compass > span{
@@ -155,10 +171,11 @@ text-align: center;
     top:50%;
     left:50%;
     line-height: 60px;
-    font-size: 30px;
+    font-size: 25px;
     transform: translate(-50%,-50%);
     background-color: rgb(59, 171, 199);
     text-align: center;
+   
 }
 
 .rotate__right{
